using the text_area

--- a/app/views/hablas/_form.html.erb
+++ b/app/views/hablas/_form.html.erb
@@ -75,6 +75,7 @@ function capitalize(s) {
 }
 
 function startDictation(event) {
+  document.getElementById('final_transcript');
   if (recognizing) {
     recognition.stop();
     return;
